--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,25 @@
 
 @custom-variant dark (&:is(.dark *));
 
+
+
+::-webkit-scrollbar {
+  width: 14px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px black; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #efb100; 
+  cursor: pointer;
+
+}
+
 :root {
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
